# mis

./: .gitignore  DAILY_REPORT_DATA_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  db.py  jute_mill.db  main.py  pyproject.toml
LowProducerS4/: s4low.py
WvgHessian/: HessianLowProducer.py  query.py
WvgS4/: S4LowProducer.py  S4efftodatewise.py  query.py  s4effdaywise.py  s4fromdaytoday.py
batching/: refqueries.py  rollestockbatchingquery.py  spreader_roll_issue.py  spreader_rules.py  spreaderprodentry.py
doff10/: doff10.py  doff10new.py  query.py  spgframe.py
hands/: hands.py  models.py  query.py
overall/: dailySummary.py  googlesheettest.py  query.py
pages/: About.py  Daily_Summary.py  Doff10.py  Doff_Details.py  HessianLowProducer.py  RequiredIssue.py  S4FromDayToDay.py  S4LowProducer.py  S4ReportTodate.py  S4reportDay.py  SpreaderProductionEntry.py  WdgLowProducer.py  Weaving.py  doff10detailed.py  googlesheettest.py  hands.py  requiredIssue2.py  rollstockReports.py  spgLowProducer.py  spgframe-analysis.py  spglowporducerwhatsapp.py  spinplan.py  stock_dashboard.py
spg/: SpgFromDayToDay.py  query.py  spglowproducerwhatsapp.py
wdg/: WdgLowProducer.py  query.py
wvg/: wvg.py
