[project]
name = "mis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "st-pages>=1.0.1",
    "streamlit>=1.45.0",
    "streamlit-extras>=0.7.5",
]
